fix some static colors and login page. Calculate table headers in dark mode

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -14,7 +14,7 @@
 
 $primary   : #1976D2
 $secondary : #26A69A
-$accent    : #9C27B0
+$accent    : #9c27b0
 
 $dark      : #1D1D1D
 
@@ -22,3 +22,6 @@ $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
+
+$bg-toolbar: #424242
+$text-toolbar: #FFFFFF
